--- a/C# Web/Web Fundamentals/Workshops and Exercises/01. MVC Intro Demo/Views/Product/All.cshtml
+++ b/C# Web/Web Fundamentals/Workshops and Exercises/01. MVC Intro Demo/Views/Product/All.cshtml
@@ -4,14 +4,33 @@
     ViewData["Title"] = "All Products";
 }
 
-<div class="card" style="width: 18rem;">
-    <div class="card-header">@ViewBag.Title</div>
-    <ul class="list-group list-group-flush">
-        @foreach (var product in Model)
-        {
-            <li class="list-group-item">
-                <a asp-controller="Product" asp-action="ById" asp-route-id="@product.Id">N.@product.Id: @product.Name - @product.Price lv.</a>
-            </li>
-        }
-    </ul>
+<div class="container-fluid">
+    <div class="row-cols-4" style="margin-bottom: 5px"><form asp-controller="Product" asp-action="All" method="get">
+            <div class="input-group">
+                <input type="search" name="keyword"class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                <button type="submit" class="btn btn-outline-primary" data-mdb-ripple-init>search</button>
+            </div>
+        </form>
+    </div>
+    <div class="row row-cols-4">
+        <div class="col-lg-4">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">@ViewBag.Title</div>
+                <ul class="list-group list-group-flush">
+                    @foreach (var product in Model)
+                    {
+                        <li class="list-group-item"><a href="/Product/Details/@product.Id">N.@product.Id: @product.Name - @product.Price lv.</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <a class="btn btn-primary" asp-controller="Product" asp-action="DownloadProductsInfo">Download products info</a>
+        </div>
+    </div>
 </div>
+
+
+
+
