--- a/C# Web/Web Fundamentals/Workshops and Exercises/04. Task Board App/TaskBoardApp/Views/Home/Index.cshtml
+++ b/C# Web/Web Fundamentals/Workshops and Exercises/04. Task Board App/TaskBoardApp/Views/Home/Index.cshtml
@@ -1,8 +1,36 @@
-﻿@{
+﻿@model TaskBoardApp.Web.ViewModels.Home.HomeViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Task Board: A Board for Your Tasks</h1>
-    
+    <h1 class="display-4">
+        Task Board: A Board for Your Tasks</h1>
 </div>
+<hr />
+<section class="home-page">
+    @if (!User.Identity.IsAuthenticated)
+    {
+        <h1 class="text-center">Welcome!</h1>
+    }
+    else
+    {
+        <h1 class="text-center">Welcome, @User.Identity.Name!</h1>
+    }
+    <hr class="hr-2 bg-secondary" />
+    <h4 class="mt-4 text-center">TaskBoard is here for all your tasks.</h4>
+    <br />
+    <span class="boardSpan">Tasks: <b>@Model.AllTaskCount</b></span>
+    <ul>
+        @foreach (var board in Model.BoardsWithTaskCount)
+        {
+            <li>
+                <span class="boardSpan">@board.BoardName:
+                    <b>@board.TaskCount</b></span>
+            </li>
+        }
+    </ul>
+    @if (Model.UserTaskCount > -1)
+    {
+        <h5>You have: <b>@Model.UserTaskCount</b> tasks</h5>
+    }
+</section>
