--- a/C# Web/Web Fundamentals/Workshops and Exercises/04. Task Board App/TaskBoardApp/Views/Shared/_Layout.cshtml
+++ b/C# Web/Web Fundamentals/Workshops and Exercises/04. Task Board App/TaskBoardApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Board" asp-action="All">Boards</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Task" asp-action="Create">Create a new Task!</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
