--- a/C# Web/Web Fundamentals/Workshops and Exercises/04. Task Board App/TaskBoardApp/Views/_ViewImports.cshtml
+++ b/C# Web/Web Fundamentals/Workshops and Exercises/04. Task Board App/TaskBoardApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TaskBoardApp
 @using TaskBoardApp.Web.ViewModels
+@using TaskBoardApp.Web.ViewModels.Task
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
