first exam prep
pfew could have done better. Need to focus on formModel validation when needed. Think for all the input data, strings, data ids. Also the correct user and if he can perform those actions. Overall i feel good and its pretty interesting.

--- a/C# Web/Web Fundamentals/Exam Preparation/Homies/Homies/Views/Event/Add.cshtml
+++ b/C# Web/Web Fundamentals/Exam Preparation/Homies/Homies/Views/Event/Add.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model Homies.Models.Event.EventFormModel
+@{
     ViewBag.Title = "Create a New Event";
 }
 
-@*
+
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -49,5 +50,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
 
