--- a/C# Web/Web Fundamentals/Exam Preparation/Homies/Homies/Views/Event/All.cshtml
+++ b/C# Web/Web Fundamentals/Exam Preparation/Homies/Homies/Views/Event/All.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model ICollection<Homies.Models.Event.EventViewModel>
+@{
     ViewBag.Title = "All of the Events Around You";
 }
 
-@*
+
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -17,9 +18,10 @@
             </div>
 
             <a asp-controller="Event" asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">View Details</a>
-            @if (User.Identity.Name == e.Organiser)
+            @if (User.Identity?.Name == e.Organiser)
             {
                 <a asp-controller="Event" asp-action="Edit" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">Edit</a>
+                <a asp-controller="Event" asp-action="Delete" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">Delete</a>
             }
             else
             {
@@ -34,4 +36,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-*@
