--- a/C# Web/Web Fundamentals/Exam Preparation/Homies/Homies/Views/Event/Joined.cshtml
+++ b/C# Web/Web Fundamentals/Exam Preparation/Homies/Homies/Views/Event/Joined.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model ICollection<Homies.Models.Event.EventViewModel>
+@{
     ViewBag.Title = "Joined Events";
 }
 
-@*
+
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -34,6 +35,6 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
 
 
